sam-internal/k8s-out/prd/prd-sam/istio-sidecar-istio-core-sidecar-phase2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  annotations:
    manifestctl.sam.data.sfdc.net/swagger: disable
  name: istio-core-sidecar
  namespace: app
spec:
  egress:
  - bind: 127.1.2.3
    captureMode: NONE
    hosts:
    - app/*
    - service-mesh/*
    - funnel/*
    - gater/*
    - ccait/*
    - core-on-sam-sp2/*
    - core-on-sam/*
    - casam/*
    - emailinfra/*
    - universal-search/*
    - search-scale-safely/*
    - retail-cre/*
    - retail-dfs/*
    - retail-dss/*
    - cloudatlas/*
    - retail-eventlistener/*
    - retail-mds/*
    - retail-rrps/*
    - retail-rsui/*
    - retail-setup/*
    - scone/*
    port:
      name: grpc-egress
      number: 7443
      protocol: GRPC
  - bind: 127.1.2.3
    captureMode: NONE
    hosts:
    - app/*
    - service-mesh/*
    - funnel/*
    - gater/*
    - ccait/*
    - core-on-sam-sp2/*
    - core-on-sam/*
    - casam/*
    - emailinfra/*
    - universal-search/*
    - search-scale-safely/*
    - retail-cre/*
    - retail-dfs/*
    - retail-dss/*
    - cloudatlas/*
    - retail-eventlistener/*
    - retail-mds/*
    - retail-rrps/*
    - retail-rsui/*
    - retail-setup/*
    - scone/*
    port:
      name: http-egress
      number: 7442
      protocol: HTTP
  ingress:
  - captureMode: NONE
    defaultEndpoint: 127.0.0.1:7020
    port:
      name: grpc-core
      number: 7443
      protocol: GRPC
